set-up start up screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,8 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        minSdkVersion 21
     }
 
     buildTypes {
