add favorite category data fetch from api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   url_launcher: ^6.1.4
   carousel_slider: ^4.1.1
   dots_indicator: ^2.1.0
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
