--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   carousel_slider: ^4.1.1
   shimmer: ^2.0.0
   smooth_page_indicator: ^1.0.0+2
+  flutter_switch: ^0.3.2
 
 
 dev_dependencies:
